--- a/index.html
+++ b/index.html
@@ -5,9 +5,235 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Learning-School Website</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    
+    <header>
+      <section class="header-section">
+      <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light ">
+         <img class="img-fluid w-25" src="images/icon/Logo.png" alt="Logo">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse  justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#book">Books<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#courses">Courses</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#testimonial">Testimonial</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#blog">Blog</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <button class="btn my-2 my-sm-0" type="submit">Sing in</button>
+          </form>
+        </div>
+      </nav>  
+    <div class="row d-flex align-items-center justify-content-center p-5">
+      <div class="col-md-6 col-sm-12">
+          <div>
+            <p class="orange-highlight mt-2">Are you ready to Learn?</p>
+            <h2 class="mb-2">Learn With fun <br> 
+              on <span class="success-highlight">any schedule</span></h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius blandit facilisis quam netus.</p>
+          </div>
+          <form class="form-inline my-2 my-lg-0">
+            <button class="btn my-2 my-sm-0" type="submit">Get Started</button>
+          </form>
+      </div>
+      <div class="col-md-6 col-sm-12">
+         <img class="img-fluid" src="images/photos/Illustration.png" alt="">
+      </div>
+   </div>
+   </div>
+  </section>
+</header>
+
+    <section id="book">
+      <div class="container">
+        <div class="row d-flex align-items-center justify-content-center p-5 ">
+          <div class="col-md-3 col-sm-6">
+            <div class="card book">
+              <img src="images/icon/book.png" class="card-img-top img-fluid w-25 m-auto pt-3" alt="book">
+              <div class="card-body text-center">
+                <h5 class="card-title">1500+ Topic</h5>
+                <p class="card-text">Learn Anythings</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card" id="white-shadow">
+              <img src="images/icon/Student.png" class="card-img-top img-fluid w-25 m-auto pt-3" alt="Student">
+              <div class="card-body text-center">
+                <h5 class="card-title">1800+ Students</h5>
+                <p class="card-text">Learn Anythings</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card">
+              <img src="images/icon/Test.png" class="card-img-top img-fluid w-25 m-auto pt-3" alt="test">
+              <div class="card-body text-center">
+                <h5 class="card-title">9K+ Test Token</h5>
+                <p class="card-text">Learn Anythings</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6">
+            <div class="card">
+              <img src="images/icon/Students.png" class="card-img-top img-fluid w-25 m-auto pt-3" alt="Students">
+              <div class="card-body text-center">
+                <h5 class="card-title">1500+ Topic</h5>
+                <p class="card-text">Learn Anythings</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="courses">
+      <div class="container">
+        <h2 class="text-center">Online Courses</h2>
+
+        <div class="row p-3 mt-5">
+          <div class="col-md-4 col-sm-12 ">
+            <div class="card courses">
+              <img src="images/photos/Morder pyschology.png" class="card-img-top img-fluid" alt="Students">
+              <div class="card-body text-left">
+                <h5 class="card-title">Modern Psychology</h5>
+                <p class="card-text">Designation</p>
+                <form class="form-inline my-2 my-lg-0">
+                  <button class="btn my-2 my-sm-0" type="submit">Buy Course</button>
+                </form>
+              </div>
+              <div class="card-icon ">
+                <div class="icon-left d-flex justify-content-between">
+                  <img src="images/icon/calendar.png" alt="calendar">
+                  <p>Start 20 April, 2021</p>
+                </div>
+                <div class="icon-left  d-flex justify-content-between">
+                  <img src="images/icon/people.png" alt="people">
+                  <p>60 seats</p>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-12">
+          <div class="card courses">
+            <img src="images/photos/Morder psyc.png" class="card-img-top img-fluid" alt="Students">
+            <div class="card-body text-left">
+              <h5 class="card-title">Modern Psychology</h5>
+              <p class="card-text">Designation</p>
+              <form class="form-inline my-2 my-lg-0">
+                <button class="btn my-2 my-sm-0" type="submit">Buy Course</button>
+              </form>
+            </div>
+            <div class="card-icon">
+              <div class="icon-left  d-flex justify-content-between">
+                <img src="images/icon/calendar.png" alt="calendar">
+                <p>Start 20 April, 2021</p>
+              </div>
+              <div class="icon-left  d-flex justify-content-between">
+                <img src="images/icon/people.png" alt="people">
+                <p>60 seats</p>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-12">
+        <div class="card courses">
+          <img src="images/photos/Morder pychons.png" class="card-img-top img-fluid" alt="Students">
+          <div class="card-body text-left">
+            <h5 class="card-title">Modern Psychology</h5>
+            <p class="card-text">Designation</p>
+            <form class="form-inline my-2 my-lg-0">
+              <button class="btn my-2 my-sm-0" type="submit">Buy Course</button>
+            </form>
+          </div>
+          <div class="card-icon">
+            <div class="icon-left  d-flex justify-content-between">
+              <img src="images/icon/calendar.png" alt="calendar">
+              <p>Start 20 April, 2021</p>
+            </div>
+            <div class="icon-left  d-flex justify-content-between">
+              <img src="images/icon/people.png" alt="people">
+              <p>60 seats</p>
+            </div>
+          </div>
+      </div>
+    </div>
+      </div>
+    </section>
+
+    <section class="testimonial-section" id="testimonial">
+      <div class="container">
+        <h2 class="text-center">Testimonial</h2>
+          <div class="row d-flex align-items-center justify-content-center p-5">
+            <div class="col-md-2"></div>
+            <div class="col-md-4 col-sm-12 ">
+              <img class="img-fluid w-50 mb-3" src="images/photos/Man.png" alt="">
+            </div>
+            <div class="col-md-6 col-sm-12">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque aliquam dolorum repudiandae ut aspernatur dignissimos at amet voluptates nobis mollitia et recusandae repellat dolorem tempora, soluta atque, velit obcaecati officia.</p>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="row p-5">
+          <div class="col-md-4">
+            <p>Millions of people of all ages and from around
+              the world are improving their lives with us</p>
+          </div>
+          <div class="col-md-3 col-sm-12 ">
+            <ul>
+               <li id="highlight">Course</li>                                
+               <li>Graphic Design</li>
+               <li>Web Design</li>
+               <li>Business</li>
+               <li>Marketing</li>
+               <li>Engineering</li>
+            </ul>
+          </div>
+          <div class="col-md-3 col-sm-12">
+            <ul>
+              <li id="highlight">Trems</li>                                
+              <li>Graphic Design</li>
+              <li>Web Design</li>
+              <li>Business</li>
+              <li>Marketing</li>
+              <li>Engineering</li>
+           </ul>
+          </div>
+          <div class="col-md-2 col-sm-12">
+             <ul>
+              <li id="highlight">Useful Link</li>                                
+              <li>Graphic Design</li>
+              <li>Web Design</li>
+              <li>Business</li>
+              <li>Marketing</li>
+              <li>Engineering</li>
+           </ul>
+          </div>       
+        </div>
+      </div>
+      <div class="copyright">
+        <p class="text-center">Copyright © 2020 Rokomari.com</p>
+      </div>
+    </footer>
+
     
 
 
