--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     
+    <!-- START HEADER SECTION -->
+
     <header>
       <section class="header-section">
       <div class="container">
@@ -30,7 +32,7 @@
               <a class="nav-link" href="#testimonial">Testimonial</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#blog">Blog</a>
+              <a class="nav-link" href="#">Blog</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -57,6 +59,11 @@
    </div>
   </section>
 </header>
+
+  <!-- END HEADER SECTION -->
+
+
+  <!-- START BOOK SECTION -->
 
     <section id="book">
       <div class="container">
@@ -89,7 +96,7 @@
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
-            <div class="card">
+            <div class="card" id="white-shadow" >
               <img src="images/icon/Students.png" class="card-img-top img-fluid w-25 m-auto pt-3" alt="Students">
               <div class="card-body text-center">
                 <h5 class="card-title">1500+ Topic</h5>
@@ -100,6 +107,10 @@
         </div>
       </div>
     </section>
+
+    <!-- END BOOK SECTION -->
+
+   <!-- START COURSE SECTION -->
 
     <section id="courses">
       <div class="container">
@@ -175,6 +186,10 @@
       </div>
     </section>
 
+    <!-- END COURSE SECTION -->
+
+    <!-- START TESTIMONIAL SECTION -->
+
     <section class="testimonial-section" id="testimonial">
       <div class="container">
         <h2 class="text-center">Testimonial</h2>
@@ -190,14 +205,18 @@
         </div>
     </section>
 
+    <!-- END TESTIMONIAL SECTION -->
+
+    <!-- START FOOTER SECTION -->
+
     <footer>
       <div class="container">
-        <div class="row p-5">
-          <div class="col-md-4">
+        <div class="row p-5 footer-left">
+          <div class="col-md-4 col-sm-12">
             <p>Millions of people of all ages and from around
               the world are improving their lives with us</p>
           </div>
-          <div class="col-md-3 col-sm-12 ">
+          <div class="col-md-3 col-sm-6 ">
             <ul>
                <li id="highlight">Course</li>                                
                <li>Graphic Design</li>
@@ -207,7 +226,7 @@
                <li>Engineering</li>
             </ul>
           </div>
-          <div class="col-md-3 col-sm-12">
+          <div class="col-md-3 col-sm-6">
             <ul>
               <li id="highlight">Trems</li>                                
               <li>Graphic Design</li>
@@ -217,7 +236,7 @@
               <li>Engineering</li>
            </ul>
           </div>
-          <div class="col-md-2 col-sm-12">
+          <div class="col-md-2 col-sm-6">
              <ul>
               <li id="highlight">Useful Link</li>                                
               <li>Graphic Design</li>
@@ -234,11 +253,7 @@
       </div>
     </footer>
 
-    
-
-
-
-
+    <!-- END FOOTER SECTION -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
